@@ -1,3 +1,11 @@
+2002-09-24 18:01  zedek
+
+	* panel/builtins.c: Fixed (who knows ;) the LED clock
+
+2002-09-24 02:33  zedek
+
+	* ChangeLog: Update ChangeLog
+
 2002-09-24 02:28  zedek
 
 	* panel/: builtins.c, xfce_clock.c: Removed the previous debug
